@@ -1,3 +1,9 @@
+globus-dsi-rest (0.19-1+gt6.@distro@) @distro@; urgency=low
+
+  * Add curl cookie/ssl/dns resource sharing between handles
+
+ -- Globus Toolkit <support@globus.org>  Wed, 23 Nov 2016 09:24:19 -0500
+
 globus-dsi-rest (0.18-1+gt6.@distro@) @distro@; urgency=low
 
   * Improve diagnostics
